--- a/imic2015/index.html
+++ b/imic2015/index.html
@@ -20,9 +20,9 @@
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
 
     <!-- Custom styles for this page -->
     <link href="../stylesheets/carousel.css" rel="stylesheet">
@@ -33,7 +33,7 @@
   <body>
 
     <!-- carousel navbar (bootstrap) -->
-      <div class="navbar-wrapper">
+    <div class="navbar-wrapper">
       <div class="container">
 
         <div class="navbar navbar-inverse navbar-static-top" role="navigation">
@@ -77,36 +77,40 @@
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
-        <header class="inner">
-        </header>
+      <header class="inner">
+      </header>
     </div>
 
 
 
     <!-- Marketing messaging and featurettes
-    ================================================== -->
+         ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="container welcome">
-          <!-- hardcode 1170 width to match navbar default -->
-          <img src="../images/MICCAI2015-banner-web.jpg" class="img-responsive img-rounded" alt="MICCAI 2015, Oct 5-9, Munich" width="1170">
-          <!-- <img src="../images/imic2015.png"> -->
-          <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
-          <h2 id="project_tagline">Part of <a href=http://miccai2015.org/ target="_blank">MICCAI 2015:</a> October 5th to 9th, 2015 - Munich, Germany</h2>
-          <p><strong>The Second Interactive Medical Image Computing (IMIC) Workshop was held in Munich, on Friday October 9th, in conjunction with MICCAI 2015.  This page includes summary information and links to workshop content.  We look forward to futher events on these topics.</strong></p>
+      <!-- hardcode 1170 width to match navbar default -->
+      <img src="../images/MICCAI2015-banner-web.jpg" class="img-responsive img-rounded" alt="MICCAI 2015, Oct 5-9, Munich" width="1170">
+      <!-- <img src="../images/imic2015.png"> -->
+      <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
+      <h2 id="project_tagline">Part of <a href=http://miccai2015.org/ target="_blank">MICCAI 2015:</a> October 5th to 9th, 2015 - Munich, Germany</h2>
+      <p><strong>The Second Interactive Medical Image Computing (IMIC) Workshop was held in Munich, on Friday October 9th, in conjunction with MICCAI 2015.  This page includes summary information and links to workshop content.  We look forward to futher events on these topics.</strong></p>
 
-          <p>The workshop format encourages hands-on demonstrations to stimulate interaction between developers and the user community of clinicians, neuroscientists, and biologists. Our focus is on original methods and elegant implementations that establish a human-machine dialog. Evaluation will be based on productivity, accuracy, simplicity, and overall user experience.</p>
+      <p>The workshop format encourages hands-on demonstrations to stimulate interaction between developers and the user community of clinicians, neuroscientists, and biologists. Our focus is on original methods and elegant implementations that establish a human-machine dialog. Evaluation will be based on productivity, accuracy, simplicity, and overall user experience.</p>
 
-          <p>Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various demo tools on different data.</p>
+      <p>Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various demo tools on different data.</p>
 
-     <h3>Workshop Location</h3>
-
-     <p> TBD
-
-     <h3>Best Paper Prizes</h3>
-     <p> TBD
-
-     <h3><a name="schedule"></a>Workshop Schedule</h3>
+      <h3><a name="schedule"></a>Workshop Schedule</h3>
+      <ul>
+        <li>Welcome (5 min)</li>
+        <li>Plenary talk by Dr. Gabor Fichtinger (40 min)</li>
+        <li>Demo introductions: 10*2 min each</li>
+        <li>Oral presentations: 3*20 mins each</li>
+        <li>Coffee break</li>
+        <li>Demo session (1 hour)</li>
+        <li>Oral presentations: 3*20 mins each</li>
+        <li>Plenary talk by Dr. Carsten Rother (40 min)</li>
+        <li>Adjourn</li>
+      </ul>
 
     </div>
 
@@ -114,75 +118,75 @@
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
-
         <div href="#home" class="col-lg-4">
           <img src="../images/divider.svg" alt="~~~~~">
           <h2>Schedule</h2>
           <h3>Important Dates</h3>
-<p><strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission Deadline: June 25, 2015</a></strong> (note there will be <b>No Extensions</b>)</p>
-<p>Reviewer Deadline: July 16, 2015</p>
-<p>Author Notification: July 21, 2015</p>
-<p>Camera Ready Versions: August 1, 2015</p>
-<p>Workshop: Friday, October 9, 2015</p>
+          <ul>
+            <li><strike><strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission Deadline: June 25, 2015</a></strong> (note there will be <b>No Extensions</b>)</strike></li>
+            <li><strike>Reviewer Deadline: July 16, 2015</strike></li>
+            <li><strike>Author Notification: July 21, 2015</strike></li>
+            <li><strike>Camera Ready Versions: August 1, 2015</strike></li>
+            <li>Workshop: Friday, October 9, 2015</li>
+          </ul>
         </div><!-- /.col-lg-4 -->
 
         <div href="#topics" class="col-lg-4">
           <img src="../images/divider.svg" alt="~~~~~">
           <h2>Topics</h2>
-<p>Visualization of large multiparametric, multimodal, and/or multisubject imaging data</p>
-<p>Interactive control of image segmentation or registration algorithms</p>
-<p>Software architectures to optimize the use of high-performance computing (e.g. clusters or GPUs)</p>
-<p>Novel interaction or visualization devices such as native 3D displays, head-coupled tracking, hand tracking, gesture detection, custom user input devices and related technologies</p>
-<p>Interactive simulations of body systems, disease processes, and interventions</p>
-<p>Education and training systems that use interactive methods</p>
-<p>Other research that involves interactive computing applied to medical image computing</p>
+          <ul>
+            <li>Visualization of large multiparametric, multimodal, and/or multisubject imaging data</li>
+            <li>Interactive control of image segmentation or registration algorithms</li>
+            <li>Software architectures to optimize the use of high-performance computing (e.g. clusters or GPUs)</li>
+            <li>Novel interaction or visualization devices such as native 3D displays, head-coupled tracking, hand tracking, gesture detection, custom user input devices and related technologies</li>
+            <li>Interactive simulations of body systems, disease processes, and interventions</li>
+            <li>Education and training systems that use interactive methods</li>
+            <li>Other research that involves interactive computing applied to medical image computing</li>
+          </ul>
         </div><!-- /.col-lg-4 -->
 
         <div href="#schedule" class="col-lg-4">
           <img src="../images/divider.svg" alt="~~~~~">
           <h2>IMIC</h2>
-<p>Interactive systems are widely used in research and clinical practice, yet most scientific venues make it impossible to fully communicate exactly how they work.  IMIC combines live demos, hands-on examples, and scientific publications to support exchange of ideas among a community of like-minded researchers.  IMIC seeks to showcase and disseminate the best examples of dynamic interaction with medical imagery.</p>
-
+          <p>Interactive systems are widely used in research and clinical practice, yet most scientific venues make it impossible to fully communicate exactly how they work.  IMIC combines live demos, hands-on examples, and scientific publications to support exchange of ideas among a community of like-minded researchers.  IMIC seeks to showcase and disseminate the best examples of dynamic interaction with medical imagery.</p>
         </div><!-- /.col-lg-4 -->
 
       </div><!-- /.row -->
 
 
+     <h3>Workshop Location</h3>
+     <p> TBD
 
-    <!-- MAIN CONTENT -->
-
-
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-
-<h3><a name="organizers" class="anchor" href="#organizers"><span class="octicon octicon-link"></span></a>Organizing Committee</h3>
-
-<ul>
+     <h3>Best Paper Prizes</h3>
+     <p> TBD
 
 
-<li> <a href="http://www.ee.bgu.ac.il/~rrtammy/">Tammy Riklin Raviv</a>, The Department of Electrical and Computer Engineering, Ben-Gurion University </li>
+      <!-- MAIN CONTENT -->
 
-<li> <a href="https://www.spl.harvard.edu/pages/People/pieper">Steve Pieper</a>, Isomics, Inc.</li>
 
-<li> <a href="https://sites.google.com/site/gaoyicn/">Yi Gao</a>, Department of Electrical & Computer Engineering and the Comprehensive Cancer Center, The University of Alabama at Birmingham</li>
+      <div id="main_content_wrap" class="outer">
+        <section id="main_content" class="inner">
+          <h3>
+            <h3><a name="organizers" class="anchor" href="#organizers"><span class="octicon octicon-link"></span></a>Organizing Committee</h3>
+            <ul>
+              <li> <a href="http://www.ee.bgu.ac.il/~rrtammy/">Tammy Riklin Raviv</a>, The Department of Electrical and Computer Engineering, Ben-Gurion University </li>
+              <li> <a href="https://www.spl.harvard.edu/pages/People/pieper">Steve Pieper</a>, Isomics, Inc.</li>
+              <li> <a href="http://gaoyi.github.io/">Yi Gao</a>, Departments of Biomedical Informatics, Computer Science, and Applied Mathematics. Stony Brook University</li>
+              <li> <a href="http://bmenze.de/">Bjoern Menze</a>, TU Munchen</li>
+            </ul>
 
-<li> <a href="http://bmenze.de/">Bjoern Menze</a>, TU Munchen</li>
+            <h3><a name="referees" class="anchor" href="#referees"><span class="octicon octicon-link"></span></a>On-site referees for best paper prize</h3>
 
-</ul>
+            <h3><a name="programcommittee" class="anchor" href="#programcommittee"><span class="octicon octicon-link"></span></a>Program Committee</h3>
 
-<h3><a name="referees" class="anchor" href="#referees"><span class="octicon octicon-link"></span></a>On-site referees for best paper prize</h3>
+            <h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Paper <strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission Process</a></strong></h3>
 
-<h3><a name="programcommittee" class="anchor" href="#programcommittee"><span class="octicon octicon-link"></span></a>Program Committee</h3>
-
-<h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Paper <strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission Process</a></strong></h3>
-
-<p></p><strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission site: https://cmt3.research.microsoft.com/IMIC2015</a></strong></p>
+            <p></p><strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission site: https://cmt3.research.microsoft.com/IMIC2015</a></strong></p>
 
 <p>Submissions will be carefully peer-reviewed by a selected group of researchers with extensive experience in IMIC.
-Workshop presentations are expected to represent a cross section of the best available research in this area.
-As this is an emerging field that has not been historically well-covered in the MICCAI literature,
-accepted submissions will set a precedent that can be expected to be widely discussed.</p>
+  Workshop presentations are expected to represent a cross section of the best available research in this area.
+  As this is an emerging field that has not been historically well-covered in the MICCAI literature,
+  accepted submissions will set a precedent that can be expected to be widely discussed.</p>
 
 <p>Note that the online submission system allows upload of supplementary files, so you may include a video, links to project information or online content, and/or a description of your live demo.</p>
 
@@ -191,12 +195,12 @@ accepted submissions will set a precedent that can be expected to be widely disc
 <h6>Paper format</h6>
 <ul>
 
-<li> Papers should be formatted using the
-<a href="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" title="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" rel="nofollow"><font color="#0066cc">LNCS style files</font></a>. </li>
+  <li> Papers should be formatted using the
+    <a href="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" title="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" rel="nofollow"><font color="#0066cc">LNCS style files</font></a>. </li>
 
-<li> Papers should have 4-8 pages, but shorter papers accompanied by videos or live demonstrations will also be given full consideration.</li>
+  <li> Papers should have 4-8 pages, but shorter papers accompanied by videos or live demonstrations will also be given full consideration.</li>
 
-<li> Submissions with video and/or proposing live demonstration will be given higher priority for oral presentation.</li>
+  <li> Submissions with video and/or proposing live demonstration will be given higher priority for oral presentation.</li>
 
 </ul>
 
@@ -205,55 +209,55 @@ accepted submissions will set a precedent that can be expected to be widely disc
 
 <h6>Review process</h6>
 <p>The review of the papers will be double-blind to the extent physically possible.
-Submissions should be anonymous according to the MICCAI guidelines.<br /></p>
+  Submissions should be anonymous according to the MICCAI guidelines.<br /></p>
 
 <h6>Previous MICCAI submissions</h6>
 <p>If desired authors can upload the MICCAI reviews and rebuttal to be considered by the workshop chairs.<br /></p>
 
 <h6>Patent disclosure policy</h6>
 <p>The purpose of the workshop is to exchange ideas and methods to advance the state of medical care. Attendees
-of the workshop and readers of the proceedings are expected to be able to implement and use the presented methods
-in their own work.
-<em>Any restrictions on the usability of presented methods,
-whether for commercial or for non-commercial applications, must be disclosed.</em>
-<br /><br />
-This information should be included in a separate section at the end of text in the final ('camera-ready')
-version of the manuscript, and it will be printed in the proceedings in order to help your readers to
-make informed decisions.</p>
+  of the workshop and readers of the proceedings are expected to be able to implement and use the presented methods
+  in their own work.
+  <em>Any restrictions on the usability of presented methods,
+    whether for commercial or for non-commercial applications, must be disclosed.</em>
+  <br /><br />
+  This information should be included in a separate section at the end of text in the final ('camera-ready')
+  version of the manuscript, and it will be printed in the proceedings in order to help your readers to
+  make informed decisions.</p>
 
 <h3>
-<a name="why-imic" class="anchor" href="#why-imic"><span class="octicon octicon-link"></span></a>Why IMIC?</h3>
+  <a name="why-imic" class="anchor" href="#why-imic"><span class="octicon octicon-link"></span></a>Why IMIC?</h3>
 
 <p>The Medical Image Computing literature traditionally favors fully-automated analysis algorithms that offer the potential high throughput, objective, and reproducible results for large data collections.  However fully-automated techniques are not able to handle many time-critical tasks, nor can they handle tasks that require contextual or general knowledge not readily available in the images alone.  This workshop addresses the topic of human interaction with algorithms for initialization, steering, quality control, and visualization for problem domains such as segmentation and registration, object detection, tracking.  The workshop format encourages hands-on demonstrations to stimulate interaction between developers and the user community of clinicians, neuroscientists, and biologists.  Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various tools on different data.  In the call for participation in the workshop we ask for extended abstracts or short papers that are accompanied by live demos.  Our focus will be on original methods and elegant implementations that establish a human-machine dialog.  Evaluation will be based on productivity, accuracy, simplicity, and overall user experience.</p>
-      </section>
-    </div>
+</section>
+</div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>IMIC 2015 is a project of the <a href="http://interactivemedical.org">Interactive Medical Organization</a></p>
-        <p>Copyright 2015 Interactive Medical Organization</p>
-      </footer>
-    </div>
+<!-- FOOTER  -->
+<div id="footer_wrap" class="outer">
+  <footer class="inner">
+    <p>IMIC 2015 is a project of the <a href="http://interactivemedical.org">Interactive Medical Organization</a></p>
+    <p>Copyright 2015 Interactive Medical Organization</p>
+  </footer>
+</div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../javascripts/bootstrap.min.js"></script>
+<!-- Bootstrap core JavaScript
+     ================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="../javascripts/bootstrap.min.js"></script>
 
-    <!-- google analytics  -->
-    <script type="text/javascript">
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-      document.write(unescape(
-        "%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-      try {
-        var pageTracker = _gat._getTracker("UA-49071927-1");
-      pageTracker._trackPageview();
-      } catch(err) {}
-    </script>
+<!-- google analytics  -->
+<script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape(
+  "%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+  try {
+  var pageTracker = _gat._getTracker("UA-49071927-1");
+  pageTracker._trackPageview();
+  } catch(err) {}
+</script>
 
-  </body>
+</body>
 </html>
