--- a/imic2015/index.html
+++ b/imic2015/index.html
@@ -101,15 +101,11 @@
 
       <h3><a name="schedule"></a>Workshop Schedule</h3>
       <ul>
-        <li>Welcome (5 min)</li>
-        <li>Plenary talk by Dr. Gabor Fichtinger (40 min)</li>
-        <li>Demo introductions: 10*2 min each</li>
-        <li>Oral presentations: 3*20 mins each</li>
-        <li>Coffee break</li>
-        <li>Demo session (1 hour)</li>
-        <li>Oral presentations: 3*20 mins each</li>
-        <li>Plenary talk by Dr. Carsten Rother (40 min)</li>
-        <li>Adjourn</li>
+        <li>13:30 Welcome</li>
+        <li>13:35  5 oral 15 minutes each</li>
+        <li>14:50 - 16:30 Demo (Coffee break at 15:30)</li>
+        <li>16:30  4 oral 15 minutes each</li>
+        <li>17:30 Best demo award announcement + Adjourn</li>
       </ul>
 
     </div>
