--- a/imic2015/index.html
+++ b/imic2015/index.html
@@ -122,7 +122,7 @@
             <li><strike><strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission Deadline: June 25, 2015</a></strong> (note there will be <b>No Extensions</b>)</strike></li>
             <li><strike>Reviewer Deadline: July 16, 2015</strike></li>
             <li><strike>Author Notification: July 24, 2015</strike></li>
-            <li><strike>Camera Ready Versions: August 1, 2015</strike></li>
+            <li>Camera Ready Versions: August 1, 2015</li>
             <li>Workshop: Friday, October 9, 2015</li>
           </ul>
         </div><!-- /.col-lg-4 -->
@@ -174,6 +174,21 @@
             <h3><a name="referees" class="anchor" href="#referees"><span class="octicon octicon-link"></span></a>On-site referees for best paper prize</h3>
 
             <h3><a name="programcommittee" class="anchor" href="#programcommittee"><span class="octicon octicon-link"></span></a>Program Committee</h3>
+            <ul>
+              <li> Rafeef Abugharbieh </li>
+              <li> Sylvain Bouix </li>
+              <li> Andrey Fedorov </li>
+              <li> Moti Friman </li>
+              <li> Shiri Gordon </li>
+              <li> Yaniv Gur </li>
+              <li> Leo Joskovitch </li>
+              <li> Dagmar Kainmueller </li>
+              <li> Tina Kapur </li>
+              <li> Ender Konukoglu </li>
+              <li> Jim Miller </li>
+              <li> Isaiah Norton </li>
+              <li> Peter Savadjiev </li>
+            </ul>
 
             <h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Paper <strong><a href="https://cmt3.research.microsoft.com/IMIC2015">Submission Process</a></strong></h3>
 
