ENH: a link to last year's page

--- a/imic2015/index.html
+++ b/imic2015/index.html
@@ -99,6 +99,8 @@
 
       <p>Attendees are encouraged to bring challenging real-world datasets and allow active experimentation with various demo tools on different data.</p>
 
+      <h3><a href="../imic2014/index.html">Take a look at last year's IMIC</a></h3>
+
       <h3><a name="schedule"></a>Workshop Schedule</h3>
       <ul>
         <li>13:30 Welcome</li>
