Add movie link for Costa demo

--- a/imic2015/index.html
+++ b/imic2015/index.html
@@ -159,7 +159,7 @@
 
       <li>An implementation example of the deformation method for real-time simulation of biological tissue formed by fibers and fluid<br/>
 
-        Ivan Costa</li>
+        Ivan Costa (<a href="https://dl.dropboxusercontent.com/u/1655800/FFM.wmv">demo movie</a>) </li>
       <li>An immersive virtual reality environment for diagnostic imaging<br/>
 
         Franklin King, Jayender Jagadeesan, Tina Kapur, Steve Pieper, Andras Lasso, Gabor Fichtinger </li>
