Add Tamas demo to list

--- a/imic2015/index.html
+++ b/imic2015/index.html
@@ -195,6 +195,9 @@
       <li>Model-based Catheter Segmentation in MRI-images <br/>
 
         Andre Mastmeyer</li>
+      <li>Navigated surgical tools for breast tumor excision using SlicerIGT as an open-source platform <br/>
+
+        Tamas Ungi, Andras Lasso, Gabrielle Gauvin, Caitlin T. Yeo, Padina Pezeshki, Thomas Vaughan, Kaci Carter, John Rudan, C. Jay Engel, Gabor Fichtinger</li>
     </ol>
 
     </div>
