ENH: best demo award added

--- a/imic2015/index.html
+++ b/imic2015/index.html
@@ -247,8 +247,15 @@
      <p> TBD
 
      <h3>Best Paper Prizes</h3>
-     <p> TBD
+     <ol>
+      <li>Intuitive and Smart Editing of Three-Dimensional Geometric Heart Valve Apparatus Models from Cardiac CT Data <br/>
 
+        F&eacute;lix Lades, Michael Wels, Stefan Steidl, Michael Suehling </li>
+
+      <li>Fast Correction Method for Abdominal Multi-Organ Segmentation Using 2D/3D Free Form Deformation and Posterior Shape Models<br/>
+
+        Waldo Valenzuela, Juan Cerrolaza, Mauricio Reyes, Ronald Summers, Marius Linguraru </li>
+     </ol>
 
       <!-- MAIN CONTENT -->
 
