Add workshop location for the record

--- a/imic2015/index.html
+++ b/imic2015/index.html
@@ -244,7 +244,7 @@
       </div><!-- /.row -->
 
      <h3>Workshop Location</h3>
-     <p> TBD
+     <p> Forum 8, Holiday Inn Munich City Center
 
      <h3>Best Paper Prizes</h3>
      <ol>
