Clarify award was for best demo

--- a/imic2015/index.html
+++ b/imic2015/index.html
@@ -246,13 +246,13 @@
      <h3>Workshop Location</h3>
      <p> Forum 8, Holiday Inn Munich City Center
 
-     <h3>Best Paper Prizes</h3>
+     <h3>Best Demo Prizes</h3>
      <ol>
-      <li>Intuitive and Smart Editing of Three-Dimensional Geometric Heart Valve Apparatus Models from Cardiac CT Data <br/>
+      <li>First Prize: Intuitive and Smart Editing of Three-Dimensional Geometric Heart Valve Apparatus Models from Cardiac CT Data <br/>
 
         F&eacute;lix Lades, Michael Wels, Stefan Steidl, Michael Suehling </li>
 
-      <li>Fast Correction Method for Abdominal Multi-Organ Segmentation Using 2D/3D Free Form Deformation and Posterior Shape Models<br/>
+      <li>Second Prize: Fast Correction Method for Abdominal Multi-Organ Segmentation Using 2D/3D Free Form Deformation and Posterior Shape Models<br/>
 
         Waldo Valenzuela, Juan Cerrolaza, Mauricio Reyes, Ronald Summers, Marius Linguraru </li>
      </ol>
