Fix a few typos on the site

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -89,7 +89,7 @@
 
     <div class="container welcome">
       <!-- hardcode 1170 width to match navbar default -->
-      <img src="../images/MICCAI2016-banner-web.jpg" class="img-responsive img-rounded" alt="MICCAI 2016, Oct 5-9, Munich" width="1170">
+      <img src="../images/MICCAI2016-banner-web.jpg" class="img-responsive img-rounded" alt="MICCAI 2016, Oct 17-21, Athens" width="1170">
       <!-- <img src="../images/imic2016.png"> -->
       <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
       <h2 id="project_tagline">Part of <a href=http://miccai2016.org/ target="_blank">MICCAI 2016:</a> October 17-21 - Athens, Greece</h2>
@@ -276,7 +276,7 @@
               <li> <a href="https://www.spl.harvard.edu/pages/People/pieper">Steve Pieper</a>, Isomics, Inc., Surgical Planning Lab</li>
               <li> <a href="http://gaoyi.github.io/">Yi Gao</a>, Departments of Biomedical Informatics, Computer Science, and Applied Mathematics. Stony Brook University</li>
               <li> <a href="http://bmenze.de/">Bjoern Menze</a>, TU Munchen</li>
-              <li> <a href="https://www.spl.harvard.edu/pages/People/tkapur/">Tina Kapur</a>, Brigham and Women's Hospital, Surgical Planning Lab</li>
+              <li> <a href="https://www.spl.harvard.edu/pages/People/tkapur">Tina Kapur</a>, Brigham and Women's Hospital, Surgical Planning Lab</li>
             </ul>
 
             <!-- <h3><a name="referees" class="anchor" href="#referees"><span class="octicon octicon-link"></span></a>On-site referees for best paper prize</h3> -->
@@ -288,7 +288,7 @@
 
             <h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Paper <strong><a href="https://cmt3.research.microsoft.com/IMIC2016">Submission Process</a></strong></h3>
 
-            <p></p><strong><a href="https://cmt3.research.microsoft.com/IMIC2016">Submission site: https://cmt3.research.microsoft.com/IMIC2016</a></strong></p>
+            <p></p><strong><a href="https://cmt3.research.microsoft.com/IMIC2016">Submission site: https://cmt3.research.microsoft.com/IMIC2016 (not yet available)</a></strong></p>
 
 <p>Submissions will be carefully peer-reviewed by a selected group of researchers with extensive experience in IMIC.
   Workshop presentations are expected to represent a cross section of the best available research in this area.
