ENH: important dates added

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -223,14 +223,12 @@
           <h2>Schedule</h2>
           <h3>Important Dates</h3>
           <ul>
-            <li>TBD</li>
-            <!--
-            <li><strike><strong><a href="https://cmt3.research.microsoft.com/IMIC2016">Submission Deadline: June 25, 2016</a></strong> (note there will be <b>No Extensions</b>)</strike></li>
-            <li><strike>Reviewer Deadline: July 16, 2016</strike></li>
-            <li><strike>Author Notification: July 24, 2016</strike></li>
-            <li>Camera Ready Versions: August 5, 2016</li>
-            <li>Workshop: Friday, October 9, 2016</li>
-            -->
+            <li><strong>Submission Deadline: June 24, 2016</strong> (note there will be <b>No Extensions</b>)</li>
+            <li>Author Notification: July 25, 2016</li>
+            <!-- <li><strike><strong><a href="https://cmt3.research.microsoft.com/IMIC2016">Submission Deadline: June 24, 2016</a></strong> (note there will be <b>No Extensions</b>)</strike></li> -->
+            <!-- <li><strike>Reviewer Deadline: July 16, 2016</strike></li> -->
+            <!-- <li>Camera Ready Versions: August 5, 2016</li> -->
+            <li>Workshop: Friday, October 21, 2016</li>
           </ul>
         </div><!-- /.col-lg-4 -->
 
