--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -286,7 +286,7 @@
 
             <h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Paper <strong><a href="https://cmt3.research.microsoft.com/IMIC2016">Submission Process</a></strong></h3>
 
-            <p></p><strong><a href="https://cmt3.research.microsoft.com/IMIC2016">Submission site: https://cmt3.research.microsoft.com/IMIC2016 (not yet available)</a></strong></p>
+            <p></p><strong><a href="https://cmt3.research.microsoft.com/IMIC2016">Submission site: https://cmt3.research.microsoft.com/IMIC2016</a></strong></p>
 
 <p>Submissions will be carefully peer-reviewed by a selected group of researchers with extensive experience in IMIC.
   Workshop presentations are expected to represent a cross section of the best available research in this area.
