--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -89,7 +89,7 @@
 
     <div class="container welcome">
       <!-- hardcode 1170 width to match navbar default -->
-      <img src="../images/MICCAI2016-banner-web.jpg" class="img-responsive img-rounded" alt="MICCAI 2016, Oct 17-21, Athens" width="1170">
+      <img src="../images/MICCAI2016-banner-web.jpg" class="img-responsive img-rounded" alt="MICCAI 2016, Oct 21, Athens" width="1170">
       <!-- <img src="../images/imic2016.png"> -->
       <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
       <h2 id="project_tagline">Part of <a href=http://miccai2016.org/ target="_blank">MICCAI 2016:</a> October 17-21 - Athens, Greece</h2>
@@ -223,8 +223,8 @@
           <h2>Schedule</h2>
           <h3>Important Dates</h3>
           <ul>
-            <li><strong>Submission Deadline: June 24, 2016</strong> (note there will be <b>No Extensions</b>)</li>
-            <li>Author Notification: July 25, 2016</li>
+            <li><strong>Submission Deadline: July 10, 2016</strong> </li>
+            <li>Author Notification: August 10, 2016</li>
             <!-- <li><strike><strong><a href="https://cmt3.research.microsoft.com/IMIC2016">Submission Deadline: June 24, 2016</a></strong> (note there will be <b>No Extensions</b>)</strike></li> -->
             <!-- <li><strike>Reviewer Deadline: July 16, 2016</strike></li> -->
             <!-- <li>Camera Ready Versions: August 5, 2016</li> -->
