--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -92,7 +92,7 @@
       <img src="../images/MICCAI2016-banner-web.jpg" class="img-responsive img-rounded" alt="MICCAI 2016, Oct 21, Athens" width="1170">
       <!-- <img src="../images/imic2016.png"> -->
       <h1 id="project_title">Interactive Medical Image Computing (IMIC) Workshop</h1>
-      <h2 id="project_tagline">Part of <a href=http://miccai2016.org/ target="_blank">MICCAI 2016:</a> October 17-21 - Athens, Greece</h2>
+      <h2 id="project_tagline">IMIC2016 will be Friday, October 21, part of <a href=http://miccai2016.org/ target="_blank">MICCAI 2016:</a> October 17-21 - Athens, Greece</h2>
       <p><strong>The Third Interactive Medical Image Computing (IMIC) Workshop will be held in Athens, on Friday October 21st, in conjunction with MICCAI 2016.  This page includes summary information and links to workshop content.  We look forward to futher events on these topics.</strong></p>
 
       <p>The workshop format encourages hands-on demonstrations to stimulate interaction between developers and the user community of clinicians, neuroscientists, and biologists. Our focus is on original methods and elegant implementations that establish a human-machine dialog. Evaluation will be based on productivity, accuracy, simplicity, and overall user experience.</p>
