Time change, Keynote, Sumission due date passed.

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -209,13 +209,21 @@
         Tamas Ungi, Andras Lasso, Gabrielle Gauvin, Caitlin T. Yeo, Padina Pezeshki, Thomas Vaughan, Kaci Carter, John Rudan, C. Jay Engel, Gabor Fichtinger</li>
       -->
     </ol>
+    <h3>Keynote speaker</h3>
+    <ul>
+      <li><strong>Tina Kapur, PhD</strong></li>
+        <p>Executive Director</p>
+        <p>Image Guided Therapy</p>
+        <p>Department of Radiology Brigham and Women's Hospital</p>
+        <p>Harvard Medical School</p>
+    </ul>
+
 
     </div>
 
 
 
     <div class="container marketing">
-
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div href="#home" class="col-lg-4">
@@ -223,12 +231,12 @@
           <h2>Schedule</h2>
           <h3>Important Dates</h3>
           <ul>
-            <li><strong>Submission Deadline: July 10, 2016</strong> </li>
+            <li><strike><strong>Submission Deadline: July 10, 2016</strong></strike></li>
             <li>Author Notification: August 5, 2016</li>
             <!-- <li><strike><strong><a href="https://cmt3.research.microsoft.com/IMIC2016">Submission Deadline: June 24, 2016</a></strong> (note there will be <b>No Extensions</b>)</strike></li> -->
             <!-- <li><strike>Reviewer Deadline: July 16, 2016</strike></li> -->
             <!-- <li>Camera Ready Versions: August 5, 2016</li> -->
-            <li>Workshop: Friday, October 21, 2016</li>
+            <li>Workshop: Monday, October 17, 2016</li>
           </ul>
         </div><!-- /.col-lg-4 -->
 
