--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -289,7 +289,24 @@
 
             <h3><a name="programcommittee" class="anchor" href="#programcommittee"><span class="octicon octicon-link"></span></a>Program Committee</h3>
             <ul>
-              <li> TBD </li>
+              <li>Jim Miller</li>
+              <li>Sarah Frisken</li>
+              <li>Guillaume Pernelle</li>
+              <li>Andre Mastmeyer</li>
+              <li>Moti Friman</li>
+              <li>Sylvain Bouix</li>
+              <li>Peter Savadjiev</li>
+              <li>Andrey Fedorov</li>
+              <li>Shiri Gordon</li>
+              <li>Danna Gurari</li>
+              <li>Mauricio Reyes</li>
+              <li>Rudolph Pienaar</li>
+              <li>Dan Blezek</li>
+              <li>Mike Halle</li>
+              <li>Liangjia Zhu</li>
+              <li>Ivan Kolesov</li>
+              <li>Yangming Ou</li>
+              <li>Michael Wels</li>
             </ul>
 
             <h3><a name="submission" class="anchor" href="#submission"><span class="octicon octicon-link"></span></a>Paper <strong><a href="https://cmt3.research.microsoft.com/IMIC2016">Submission Process</a></strong></h3>
