ENH: time tabel

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -107,9 +107,16 @@
 
       <h3><a name="schedule"></a>Tentative Full Schedule of the Workshop</h3>
       <ul>
-        <li>TBD</li>
+        <li>Just the time table, detailed schedule comming soon.</li>
+        <li>09:00 --- 10:30  Morning Session I</li>
+        <li>10:30 --- 11:00  Coffee Break</li>
+        <li>11:00 --- 13:00  Morning Session II</li>
+        <li>13:00 --- 14:00  Lunch</li>
+        <li>14:00 --- 16:00  Afternoon Session I</li>
+        <li>16:00 --- 16:30  Coffee Break</li>
+        <li>16:30 --- 18:00  Afternoon Session II</li>
         <!--
-        <li>13:30 Welcome</li>
+            <li>13:30 Welcome</li>
         <li>13:35 - 14:50:  5 oral 15 minutes each</li>
         <ol>
           <li>13:35 A Multi-Platform Interactive 3D Educational Application for Bronchoscopy & Bronchial Anatomy <br />
@@ -263,8 +270,7 @@
       </div><!-- /.row -->
 
      <h3>Workshop Location</h3>
-     <p> TBD
-
+      <p> TBD
      <h3>Best Demo Prizes</h3>
      <ol>
        <li>TBD</li>
