ENH: schedule and speaks' info

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -107,14 +107,20 @@
 
       <h3><a name="schedule"></a>Tentative Full Schedule of the Workshop</h3>
       <ul>
-        <li>Just the time table, detailed schedule comming soon.</li>
-        <li>09:00 --- 10:30  Morning Session I</li>
-        <li>10:30 --- 11:00  Coffee Break</li>
-        <li>11:00 --- 13:00  Morning Session II</li>
+        <li>9:00 Welcoming comments</li>
+        <li>9:05 --- 9:45 Plenary talk (Tina) 40mins</li>
+        <li>9:45 --- 10:30 : 3  talks 15 mins each</li>
+        <li>10:30 --- 11:00 MICCAI general coffee break - preparation for demo session I</li>
+        <li>11:00 --- 12:00 Demo session I</li>
+        <li>12:00 --- 12:30  Plenary talk II | (Natalie) 30 mins</li>
+        <li>12:30 --- 13:00 2 talks, 15 mins each</li>
         <li>13:00 --- 14:00  Lunch</li>
-        <li>14:00 --- 16:00  Afternoon Session I</li>
-        <li>16:00 --- 16:30  Coffee Break</li>
-        <li>16:30 --- 18:00  Afternoon Session II</li>
+        <li>14:00 --- 14:30 Plenary talk III (Leo) 30 mins</li>
+        <li>14:30 --- 16:00 6 talks, 15 mins each</li>
+        <li>16:00 --- 16:30 MICCAI general coffee break - preparation for demo session II</li>
+        <li>16:30 --- 17:15 Demo session II</li>
+        <li>(10 minutes break to count votes for best demo prize -- in the meantime people can watch everyones demos on screen and have an online voting)</li>
+        <li>17:25 Concluding comments, announcement of award winner</li>
         <!--
             <li>13:30 Welcome</li>
         <li>13:35 - 14:50:  5 oral 15 minutes each</li>
@@ -216,13 +222,22 @@
         Tamas Ungi, Andras Lasso, Gabrielle Gauvin, Caitlin T. Yeo, Padina Pezeshki, Thomas Vaughan, Kaci Carter, John Rudan, C. Jay Engel, Gabor Fichtinger</li>
       -->
     </ol>
-    <h3>Keynote speaker</h3>
+    <h3>Keynote speakers</h3>
     <ul>
       <li><strong>Tina Kapur, PhD</strong></li>
-        <p>Executive Director</p>
-        <p>Image Guided Therapy</p>
-        <p>Department of Radiology Brigham and Women's Hospital</p>
-        <p>Harvard Medical School</p>
+      <p>Executive Director</p>
+      <p>Image Guided Therapy</p>
+      <p>Department of Radiology Brigham and Women's Hospital</p>
+      <p>Harvard Medical School</p>
+      <li><strong>Nathalie Agar, PhD</strong></li>
+      <p>Director, Surgical Molecular Imaging Laboratory</p>
+      <p>Department of Neurosurgery, Brigham and Women's Hospital</p>
+      <p>Instructor of Surgery</p>
+      <p>Harvard Medical School</p>
+      <li><strong>Leo Grady, PhD</strong></li>
+      <p>Senior VP of Engineering</p>
+      <p>Redwood City, California</p>
+      <p></p>
     </ul>
 
 
