Add speaker affiliation

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -235,7 +235,7 @@
       <p>Instructor of Surgery</p>
       <p>Harvard Medical School</p>
       <li><strong>Leo Grady, PhD</strong></li>
-      <p>Senior VP of Engineering</p>
+      <p>Senior VP of Engineering, HeartFlow, Inc.</p>
       <p>Redwood City, California</p>
       <p></p>
     </ul>
