--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -105,7 +105,7 @@
         <a href="../imic2015/index.html">IMIC2015</a>
       </h3>
 
-      <h3><a name="schedule"></a>Tentative Full Schedule of the Workshop</h3>
+      <h3><a name="schedule"></a>Planned Schedule</h3>
       <ul>
         <li>9:00 Welcoming comments</li>
         <li>9:05 --- 9:45 Plenary talk (Tina) 40mins</li>
@@ -254,7 +254,7 @@
           <h3>Important Dates</h3>
           <ul>
             <li><strike><strong>Submission Deadline: July 10, 2016</strong></strike></li>
-            <li>Author Notification: August 5, 2016</li>
+            <li><strike>Author Notification: August 5, 2016</strike></li>
             <!-- <li><strike><strong><a href="https://cmt3.research.microsoft.com/IMIC2016">Submission Deadline: June 24, 2016</a></strong> (note there will be <b>No Extensions</b>)</strike></li> -->
             <!-- <li><strike>Reviewer Deadline: July 16, 2016</strike></li> -->
             <!-- <li>Camera Ready Versions: August 5, 2016</li> -->
