minor change in call for demo

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -172,7 +172,7 @@
 
       <p>Submissions will be handled in an ongoing basis. We will send an acceptance notification to the demo session within a week of the submission. The latest date to submit a demo is October 1, 2016  but please note that we may reach the number of demos we can accommodate earlier.</p>
 
-      <p>More details can be found in: http://interactivemedical.org/imic2016/</p>
+      <p>More details can be found through <a href="http://interactivemedical.org/imic2016/">this link</a>.</p>
 
       <p>We look forward to seeing you at the IMIC</p>
 
