ENH: Leo's talk title

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -195,7 +195,7 @@
 
           <tr>
             <td>14:00 --- 14:30</td>
-            <td>Plenary talk III, Dr. Leo Joskowicz</td>
+            <td>Plenary talk III "Segmentation uncertainty and error estimation without  ground truth: a framework", Dr. Leo Joskowicz</td>
           </tr>
 
           <tr>
