ENH: Natalie's talk title

--- a/imic2016/index.html
+++ b/imic2016/index.html
@@ -175,7 +175,7 @@
 
           <tr>
             <td>12:00 --- 12:30</td>
-            <td>Plenary talk II, Dr. Natalie Agar</td>
+            <td>Plenary talk II "Mass Spectrometry for Image-Guided Surgery", Dr. Natalie Agar</td>
           </tr>
 
           <tr>
